[build-system]
requires = ["hatchling", "hdcms", "opencv-python", "numpy"]
build-backend = "hatchling.build"

[project]
name = "pyhdcms"
version = "0.0.6"
description = "This package creates useful helper functions for python API"
authors = [
    {name="Jason Eveleth", email="pyhdcms-helper@jasoneveleth.com"},
    {name="Arun Moorthy"},
]
readme = "README.md"
requires-python = ">=3.7"
license = { file="LICENSE.txt" }

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
